# gbemu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
includes/: alu.h  alu.hpp  bmi.h  bmi.hpp  config.h  config.hpp  cpu.h  cpu.hpp  gb.h  gb.hpp  idu.h  idu.hpp  joypad.h  joypad.hpp  memory.h  memory.hpp  ppu.h  ppu.hpp  registers.h  registers.hpp  screen.h  screen.hpp  stack.h  stack.hpp  timer.h  timer.hpp
src/: alu.cpp  bmi.cpp  cpu.cpp  cpu_cb.cpp  gb.cpp  gb_cb.cpp  idu.cpp  joypad.cpp  main.cpp  memory.cpp  ppu.cpp  registers.cpp  screen.cpp  stack.cpp  timer.cpp
